border radius hover bug modify just add position: relative; z-index: 1;

--- a/src/components/Accouncement/index.module.scss
+++ b/src/components/Accouncement/index.module.scss
@@ -34,11 +34,11 @@
             background: #fff;
             border-radius: 2px;
             color: #000;
-            font: normal normal 16px/normal sans-serif;
+            font: normal normal 16px/24px sans-serif;
             letter-spacing: 1px;
 
             @include desktop() {
-                font: normal normal 12px/normal sans-serif;
+                font: normal normal 12px/16px sans-serif;
             }
         }
     }
