--- a/src/components/Product/index.module.scss
+++ b/src/components/Product/index.module.scss
@@ -96,7 +96,7 @@
                 justify-content: center;
                 align-items: center;
                 overflow: hidden;
-                z-index: 1;
+                z-index: 2;
                 opacity: 0;
                 pointer-events: none;
                 transition: 0.2s;
@@ -138,6 +138,7 @@
             }
 
             .box {
+                position: relative;
                 border: 0px solid transparent;
                 border-top-right-radius: 4px;
                 border-top-left-radius: 4px;
@@ -146,6 +147,7 @@
                 align-items: center;
                 overflow: hidden;
                 transition: 0.2s;
+                z-index: 1;
 
                 .image {
                     display: block;
