--- a/src/components/Recommend/index.module.scss
+++ b/src/components/Recommend/index.module.scss
@@ -39,14 +39,14 @@
         background: #fff;
         border-radius: 2px;
         color: #000;
-        font: normal normal 16px/normal sans-serif;
+        font: normal normal 16px/24px sans-serif;
         white-space: nowrap;
         text-transform: uppercase;
         animation: 20s linear 0s infinite normal none running ticker;
-        pointer-events: none;
+        // pointer-events: none;
 
         @include desktop() {
-            font-size: 12px;
+            font: normal normal 12px/16px sans-serif;
         }
 
         @include keyframes-animation(ticker) {
