--- a/src/components/Supply/index.module.scss
+++ b/src/components/Supply/index.module.scss
@@ -17,7 +17,7 @@
     border-right: 1px solid #fff;
     border-bottom: 1px solid #fff;
     border-left: 1px solid rgba(245, 245, 245, 0.8);
-    border-radius: 10px;
+    border-radius: 4px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 
@@ -30,12 +30,24 @@
     }
 
     .card {
+        position: relative;
         width: 100%;
         height: 100%;
         background: rgba(192, 192, 192, 0.2);
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        z-index: 1;
+
+        &:first-child {
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
+        }
+
+        &:last-child {
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
+        }
 
         &:nth-child(even) {
             flex-direction: column-reverse;
@@ -55,6 +67,7 @@
             border-right: 1px solid #fff;
             border-bottom: 1px solid #fff;
             border-left: 1px solid rgba(245, 245, 245, 0.8);
+            border-radius: 4px;
             box-sizing: border-box;
             flex-direction: row;
 
